hphp/test/slow/parser/hh-reserved-name-array-1.php.expectf
Fatal error: A name is expected here. in %s/test/slow/parser/hh-reserved-name-array-1.php on line 4
